# smgrep

./: .gitignore  .smgrepignore.example  Cargo.toml  LICENSE  README.md  build.rs
.claude-plugin/: marketplace.json
examples/: format_chunk_text_demo.rs  format_demo.rs
plugins/smgrep/: .mcp.json  hooks.json
plugins/smgrep/.claude-plugin/: plugin.json
src/: config.rs  error.rs  git.rs  lib.rs  main.rs  sstr.rs  sync.rs
src/chunker/: mod.rs  treesitter.rs
src/cmd/: claude_install.rs  clean.rs  daemon.rs  doctor.rs  mcp.rs  mod.rs  serve.rs  setup.rs
src/commands/: claude_install.rs  doctor.rs  list.rs  mcp.rs  serve.rs  setup.rs
src/embed/: candle.rs  worker.rs
src/file/: discovery.rs  ignore.rs
src/grammar/: mod.rs
src/search/: mod.rs
src/store/: lance.rs
tests/: chunker_test.rs  format_chunk_text_test.rs
